log
Fri May 13 07:30:22 -04 2022: 
 tests:  0|5
total_score: 0/70
6ff4706
Fri May 13 07:39:43 -04 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
./sudoku.c:54:38: error: incompatible pointer types returning 'Node *' from a function with result type 'List *' (aka 'struct List *') [-Werror,-Wincompatible-pointer-types]
            if (!is_valid(n)) return n;
                                     ^
./sudoku.c:53:11: error: unused variable 'list' [-Werror,-Wunused-variable]
    List* list=createList();
          ^
./sudoku.c:62:5: error: non-void function does not return a value in all control paths [-Werror,-Wreturn-type]
    }
    ^
./sudoku.c:63:5: error: expected identifier or '('
    return list;
    ^
./sudoku.c:64:1: error: extraneous closing brace ('}')
}
^
5 errors generated.
Compilation failed
2817780
Fri May 13 07:44:02 -04 2022: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  0|0
236da83
Fri May 13 07:48:50 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0734e14
Fri May 13 07:50:12 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c6596f6
Fri May 13 07:51:01 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
96bd372
Fri May 13 07:53:14 -04 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
66d0881
Fri May 13 07:53:40 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cecce4d
Fri May 13 07:56:04 -04 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
791ad62
Fri May 13 08:00:06 -04 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
97cc210
Fri May 13 08:00:38 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e1fed70
Fri May 13 08:02:06 -04 2022: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bba742b
Fri May 13 08:02:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d48c836
Fri May 13 08:02:41 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
a491396
Fri May 13 08:02:58 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
454c1d6
Fri May 13 08:03:16 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f087b63
Fri May 13 08:03:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
833c8ba
Fri May 13 08:03:44 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0b4a295
Fri May 13 08:04:04 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
453f541
Fri May 13 08:04:18 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
812e1af
Fri May 13 08:04:29 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
31f849e
Fri May 13 08:04:39 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
2bdbcc3
Fri May 13 08:05:45 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5b49196
Fri May 13 08:05:59 -04 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
5092c51
Fri May 13 08:06:33 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
3c3cedb
Fri May 13 08:07:06 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
bfdf08e
Fri May 13 08:07:53 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7045d5a
Fri May 13 08:08:43 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
27479e7
Fri May 13 08:09:06 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
19507d4
Fri May 13 08:12:45 -04 2022: 
 sudoku.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
ad4154f
Fri May 13 08:15:40 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
be90d8f
Fri May 13 08:18:25 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5e6e741
Fri May 13 08:22:00 -04 2022: 
 sudoku.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  3|4
total_score: 20/70
7cc7b79
Fri May 13 08:23:12 -04 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
d238688
Fri May 13 08:25:02 -04 2022: 
 tests:  0|0
b2d1aaf
Fri May 13 08:26:00 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
5c86d2b
vie 13 may 2022 11:53:28 -04: 
 sudoku.c | 60 +++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 51 insertions(+), 9 deletions(-)
test.c:245:5: error: redefinición de ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
En el fichero incluido desde test.c:5:
sudoku.c:139:5: nota: previous definition of ‘main’ with type ‘int(int,  char **)’
  139 | int main( int argc, char *argv[] )
      |     ^~~~
Compilation failed
89ad06f
vie 13 may 2022 11:54:03 -04: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
10eb7cb
vie 13 may 2022 11:54:53 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
9e0c3ad
vie 13 may 2022 11:56:53 -04: 
 sudoku.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ec10e7c
vie 13 may 2022 11:57:15 -04: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
4062d3e
vie 13 may 2022 12:09:10 -04: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
4dcfb6b
vie 13 may 2022 12:16:37 -04: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
bde7cba
vie 13 may 2022 12:19:53 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c3b9651
vie 13 may 2022 12:29:58 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
0c80b25
vie 13 may 2022 12:31:13 -04: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
546be84
vie 13 may 2022 12:35:58 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
71332f1
vie 13 may 2022 12:36:25 -04: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 55/70
7759fa1
vie 13 may 2022 12:36:49 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
848c8c5
vie 13 may 2022 12:37:43 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
c17a113
vie 13 may 2022 12:38:50 -04: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
eace040
vie 13 may 2022 12:39:26 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6a4f4ea
vie 13 may 2022 12:40:14 -04: 
 sudoku.c | 21 ++++++++++++---------
 1 file changed, 12 insertions(+), 9 deletions(-)
 tests:  7|1
total_score: 55/70
826ff26
vie 13 may 2022 14:00:10 -04: 
 tests:  7|1
total_score: 55/70
88361e5
vie 13 may 2022 14:01:24 -04: 
 sudoku.c | 6 ------
 1 file changed, 6 deletions(-)
test.c: En la función ‘DFS’:
test.c:245:5: error: ‘main’ generalmente es una función que no es static [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: el control alcanza el final de una función que no es void [-Werror=return-type]
En el nivel principal:
test.c:245:5: error: se define ‘main’ pero no se usa [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: se define ‘_strdup’ pero no se usa [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: todos los avisos se tratan como errores
Compilation failed
9116968
vie 13 may 2022 14:02:26 -04: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|1
total_score: 55/70
9664a81
vie 13 may 2022 14:06:35 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
5bcf8bd
vie 13 may 2022 14:08:30 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
bcea6dc
vie 13 may 2022 14:11:26 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
c893ff7
vie 13 may 2022 14:15:18 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
a8f8294
vie 13 may 2022 14:17:39 -04: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
d3e0d01
vie 13 may 2022 14:18:28 -04: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|1
total_score: 60/70
fa52b7c
vie 13 may 2022 14:22:02 -04: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
bcf157e
vie 13 may 2022 14:23:09 -04: 
 sudoku.c | 31 +++++++++++++++++++------------
 1 file changed, 19 insertions(+), 12 deletions(-)
 tests:  10|0
total_score: 70/70
d2a6f04
